force-app/main/default/objects/FieldPicklistAtributes__mdt/FieldPicklistAtributes__mdt.object-meta.xml
<CustomObject>
    <label>Field Picklist Atributes</label>
    <pluralLabel>Field Picklist Atributes</pluralLabel>
</CustomObject>