force-app/main/default/objects/FieldPicklistAtributes__mdt/fields/ObjectField__c.field-meta.xml
<CustomField>
    <fullName>ObjectField__c</fullName>
    <label>Object Field</label>
    <referenceTo>ObjectField__mdt</referenceTo>
    <relationshipLabel>Field Picklist Atributes</relationshipLabel>
    <relationshipName>FieldPicklistAtributes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>