force-app/main/default/objects/FieldPicklistAtributes__mdt/fields/PicklistApiName__c.field-meta.xml
<CustomField>
    <fullName>PicklistApiName__c</fullName>
    <label>Picklist Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>